# espipe

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  readme.md
.agents/skills/espipe/: SKILL.md
.agents/skills/espipe/agents/: openai.yaml
docker/: Dockerfile
examples/steam-games/: readme.md  steam-games-pipeline.yml  steam-games-template.yml
openspec/changes/add-gzip-compression/: design.md  proposal.md  tasks.md
openspec/changes/add-gzip-compression/specs/gzip-compression/: spec.md
openspec/changes/add-https-remote-input/: tasks.md
openspec/changes/add-https-remote-input/specs/https-remote-input/: spec.md
openspec/changes/add-ingest-pipeline-options/: design.md  tasks.md
openspec/changes/add-ingest-pipeline-options/specs/elasticsearch-ingest-pipeline/: spec.md
openspec/changes/add-toon-input/: design.md  proposal.md  tasks.md
openspec/changes/add-toon-input/specs/file-document-import/: spec.md
openspec/changes/add-toon-input/specs/https-remote-input/: spec.md
openspec/changes/add-toon-input/specs/rawvalue-document-pipeline/: spec.md
openspec/changes/add-toon-input/specs/toon-input/: spec.md
openspec/changes/archive/2026-04-19-use-box-rawvalue-pipeline/: design.md  tasks.md
openspec/changes/archive/2026-04-20-add-https-remote-input/: design.md  proposal.md
openspec/changes/archive/2026-04-29-add-ingest-pipeline-options/: proposal.md
openspec/changes/archive/2026-04-29-elasticsearch-index-template/: design.md
openspec/changes/archive/2026-04-29-import-glob-documents/specs/file-document-import/: spec.md
openspec/changes/elasticsearch-index-template/: proposal.md  tasks.md
openspec/changes/elasticsearch-index-template/specs/elasticsearch-index-template/: spec.md
openspec/changes/import-glob-documents/: design.md  proposal.md  tasks.md
openspec/changes/use-box-rawvalue-pipeline/: proposal.md
openspec/changes/use-box-rawvalue-pipeline/specs/rawvalue-document-pipeline/: spec.md
openspec/specs/elasticsearch-index-template/: spec.md
openspec/specs/elasticsearch-ingest-pipeline/: spec.md
openspec/specs/file-document-import/: spec.md
openspec/specs/https-remote-input/: spec.md
openspec/specs/rawvalue-document-pipeline/: spec.md
openspec/specs/toon-input/: spec.md
src/: client.rs  input.rs  main.rs  output.rs  target.rs
src/client/: auth.rs  elasticsearch.rs  known_host.rs  mod.rs
src/output/: action.rs  elasticsearch.rs  file.rs  mod.rs
src/output/elasticsearch/: bulk_response.rs
tests/: cli.rs  elasticsearch.rs  file_output.rs  index_template.rs  localhost_bench.rs
tests/fixtures/: bulk_input.ndjson  malformed.toon  measurements.toon  multi.toon  non_object.toon  pipeline_template_input.ndjson  single.toon
tests/fixtures/glob_docs/: alpha.md  bravo.md  charlie.md  ignored.tmp
tests/fixtures/glob_docs/nested/: delta.md
