[package]
name = "espipe"
description = "A minimalist command-line utility to pipe documents from a file or I/O stream into an Elasticsearch cluster."
repository = "https://github.com/VimCommando/espipe"
homepage = "https://github.com/VimCommando/espipe"
documentation = "https://docs.rs/crate/espipe"
version = "0.4.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
readme = "README.md"
keywords = ["elasticsearch", "bulk", "cli", "ndjson", "csv"]
categories = ["command-line-utilities"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "CHANGELOG.md",
    "LICENSE.md",
    "README.md",
    "src/**/*.rs",
    "tests/**/*.rs",
    "tests/fixtures/*.toon",
    "tests/fixtures/*.ndjson",
    "tests/fixtures/*.ndjson.gz",
]

[dependencies]
base64 = "0.22.1"
clap = { version = "^4.6.1", features = ["derive"] }
csv = "^1.4.0"
elasticsearch = "^9.1.0-alpha.1"
env_logger = "^0.11.10"
eyre = "^0.6.12"
flate2 = "1.1.9"
fluent-uri = "^0.4.1"
futures = "^0.3.32"
glob = "0.3.3"
log = "^0.4.29"
reqwest = { version = "0.13.3", features = ["blocking"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json5 = "0.2.1"
tempfile = "3.27.0"
tokio = "1.52.2"
toon-format = { version = "0.4.5", default-features = false }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
bytes = "1.11.1"
rcgen = "0.14.7"
rustls = "0.23.40"
